<resources>
    <string name="app_name">CustomView</string>
    <string name="auto_linefeed">auto linefeed</string>
    <string name="add_view">add view</string>
    <string name="remove_view">remove view</string>
    <string name="nest_clash">nest clash recyclerView</string>
    <string name="full_screen_move">full screen move</string>
    <string name="move">move</string>
    <string name="move_conflict">move conflict</string>
    <string name="different_direction_conflict">different direction</string>
    <string name="same_direction_conflict">same direction</string>
    <string name="synthesize_direction_conflict">synthesize conflict</string>
    <string name="rolling_picture">rolling picture</string>
</resources>
