<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.custom.customview.activity.MainActivity">

    <TextView
        android:layout_marginTop="50dp"
        style="@style/main_activity_module_title"
        android:onClick="autoLinefeed"
        android:text="@string/auto_linefeed"/>

    <TextView
        style="@style/main_activity_module_title"
        android:onClick="nestClash"
        android:text="@string/nest_clash"/>

    <TextView
        style="@style/main_activity_module_title"
        android:onClick="moveScreen"
        android:text="@string/full_screen_move"/>

    <TextView
        style="@style/main_activity_module_title"
        android:onClick="moveConflict"
        android:text="@string/move_conflict"/>


    <TextView
        style="@style/main_activity_module_title"
        android:onClick="rollPicture"
        android:text="@string/rolling_picture"/>
</LinearLayout>
