<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/different_direction_conflict"
        style="@style/main_activity_module_title"
        android:text="@string/different_direction_conflict"/>

    <TextView
        android:id="@+id/same_direction_conflict"
        style="@style/main_activity_module_title"
        android:text="@string/same_direction_conflict"/>

    <TextView
        android:id="@+id/synthesize_direction_conflict"
        style="@style/main_activity_module_title"
        android:text="@string/synthesize_direction_conflict"/>
</LinearLayout>